--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-body{
-    display : flex;
-    justify-items: center;    
+
+#tabellone{
+    display: grid;
+    grid-template-rows: repeat(10, 50px);
+    gap: 5px;
 }
 .numero {
     width: 50px;
@@ -13,9 +15,8 @@ body{
     font-weight: bold;
     background-color: #caeed9;
 }
-.container
 
-span .numero-estratto {
+#numero-estratto {
     background-color: #fa1111; /* Colore evidenziato */
     color: rgb(255, 255, 255);
 }
