--- a/style.css
+++ b/style.css
@@ -17,6 +17,14 @@
 }
 
 #numero-estratto {
-    background-color: #fa1111; /* Colore evidenziato */
+    background-color: #f72020; /* Colore evidenziato */
     color: rgb(255, 255, 255);
+    border: 2px solid #0cf86e;
+    width: 50px;
+    height: 50px;
 }
+.estratto {
+    background-color: #3033d6; /* Evidenzia il numero */
+            color: white;
+            transform: scale(1.2);
+        }
