--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .numero {
     width: 50px;
     height: 50px;
-    display: flex;
+    display: inline-block;
     justify-content: center;
     align-items: center;
     border: 1px solid #000;
